# OpenEnv-Hackathon

./: Dockerfile  README.md  app.py  baseline.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
