[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-cost-optimizer"
version = "1.0.0"
description = "Cloud Cost Optimizer OpenEnv environment for Meta x Scaler Hackathon"
authors = [
    {name = "Avanish", email = "avanish@example.com"}
]
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openenv-core>=0.1.0"
]

[project.scripts]
server = "server.app:main"
